# ai-hero-project

./: .gitignore  CLAUDE.md  README.md  agent.py  chunk.py  config.py  eval_results.json  evaluate.py  ingest.py  pyproject.toml  requirements.txt  search.py
app/: ingest.py  logs.py  search_agent.py  search_tools.py  streamlit_app.py
eval/: eval_logs.json  evaluate.py
